--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </div>
 
   <footer>
-    Try this blablabla
+    VanillaJS Practice App
   </footer>
   <script src="index.js"></script>
 </body>
