Add GTM tag tracking

--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
 
       gtag("config", "G-WZNL10LQ60");
 
-      // const buttonClick = document
-      //   .getElementById("button")
-      //   .addEventListener("click", function () {
-      //     window.dataLayer.push({
-      //       event: "cymbals_click",
-      //       buttonId: "button",
-      //     });
-      //   });
+      const buttonClick = document
+        .getElementById("button")
+        .addEventListener("click", function () {
+          window.dataLayer.push({
+            event: "cymbals_click",
+            buttonId: "button",
+          });
+        });
     </script>
     <!-- Google Tag Manager (noscript) -->
     <noscript
