Change  id name

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <h1 id="title">Drum 🥁 Kit</h1>
     <div class="set">
-      <button id="button" class="w drum">w</button>
+      <button id="cymbals" class="w drum">w</button>
       <button class="a drum">a</button>
       <button class="s drum">s</button>
       <button class="d drum">d</button>
